--- a/cpp/benchmarks/CMakeLists.txt
+++ b/cpp/benchmarks/CMakeLists.txt
@@ -268,7 +268,7 @@ ConfigureNVBench(
   GROUPBY_NVBENCH
   groupby/group_complex_keys.cpp
   groupby/group_histogram.cpp
-  groupby/group_m2.cpp
+  groupby/group_m2_var_std.cpp
   groupby/group_max.cpp
   groupby/group_max_multithreaded.cpp
   groupby/group_nunique.cpp
