--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -17,6 +17,7 @@ files:
       - depends_on_libkvikio
       - depends_on_librmm
       - depends_on_libnvcomp
+      - depends_on_numba_cuda
       - depends_on_rapids_logger
       - depends_on_rmm
       - develop
@@ -75,6 +76,7 @@ files:
       - depends_on_cudf
       - depends_on_pylibcudf
       - depends_on_libcudf
+      - depends_on_numba_cuda
   test_python_pylibcudf:
     output: none
     includes:
@@ -85,6 +87,7 @@ files:
       - test_python_pylibcudf
       - depends_on_pylibcudf
       - depends_on_libcudf
+      - depends_on_numba_cuda
   test_python_other:
     output: none
     includes:
@@ -102,6 +105,7 @@ files:
       - depends_on_cudf_kafka
       - depends_on_custreamz
       - depends_on_cudf_polars
+      - depends_on_numba_cuda
   test_java:
     output: none
     includes:
@@ -162,10 +166,10 @@ files:
     includes:
       - build_base
       - build_python_common
-      - build_python_cudf
       - depends_on_pylibcudf
       - depends_on_libcudf
       - depends_on_librmm
+      - depends_on_numba_cuda
       - depends_on_rmm
   py_run_cudf:
     output: pyproject
@@ -179,6 +183,7 @@ files:
       - pyarrow_run
       - depends_on_cupy
       - depends_on_libcudf
+      - depends_on_numba_cuda
       - depends_on_pylibcudf_pyarrow
       - depends_on_rmm
   py_test_cudf:
@@ -275,6 +280,7 @@ files:
       key: test
     includes:
       - depends_on_cupy
+      - depends_on_numba_cuda
       - pyarrow_run
       - test_python_common
       - test_python_cudf_common
@@ -441,6 +447,7 @@ dependencies:
       - output_types: conda
         packages:
           - c-compiler
+          - cuda-nvcc
           - cxx-compiler
           - dlpack>=0.8,<1.0
           - zlib>=1.2.13
@@ -449,22 +456,14 @@ dependencies:
         matrices:
           - matrix:
               arch: x86_64
-              cuda: "12.*"
             packages:
               - gcc_linux-64=14.*
               - sysroot_linux-64==2.28
           - matrix:
               arch: aarch64
-              cuda: "12.*"
             packages:
               - gcc_linux-aarch64=14.*
               - sysroot_linux-aarch64==2.28
-      - output_types: conda
-        matrices:
-          - matrix:
-              cuda: "12.*"
-            packages:
-              - cuda-nvcc
   build_cpp:
     common:
       - output_types: conda
@@ -500,21 +499,6 @@ dependencies:
       - output_types: [conda, requirements, pyproject]
         packages:
           - cython>=3.0.3
-  build_python_cudf:
-    common:
-      - output_types: [conda]
-        packages:
-        - &numba_cuda numba-cuda>=0.19.0,<0.20.0a0
-    specific:
-      - output_types: [requirements, pyproject]
-        matrices:
-          - matrix:
-              cuda: "12.*"
-            packages:
-              - &numba_cuda_cu12 numba-cuda[cu12]>=0.19.0,<0.20.0a0
-          - matrix: # Fallback for no matrix
-            packages:
-              - *numba_cuda_cu12
   numpy_run:
     common:
       - output_types: [conda, requirements, pyproject]
@@ -563,24 +547,21 @@ dependencies:
             packages:
               - cuda-version=13.0
   cuda:
+    common:
+      - output_types: [conda]
+        packages:
+          - cuda-cudart-dev
+          - cuda-nvrtc-dev
+          - cuda-nvtx-dev
+          - libcurand-dev
+          - libnvjitlink-dev
     specific:
-      - output_types: conda
-        matrices:
-          - matrix:
-              cuda: "12.*"
-            packages:
-              - cuda-cudart-dev
-              - cuda-nvrtc-dev
-              - cuda-nvtx-dev
-              - libcurand-dev
-              - libnvjitlink-dev
       - output_types: conda
         matrices:
           - matrix:
               arch: aarch64
             packages:
           - matrix:
-              cuda: "12.*"
               arch: x86_64
             packages:
               - libcufile-dev
@@ -679,10 +660,14 @@ dependencies:
     specific:
       - output_types: [conda, requirements, pyproject]
         matrices:
-          - matrix: {cuda: "12.*"}
-            packages: &run_pylibcudf_packages_all_cu12
-              - cuda-python>=12.9.1,<13.0a0
-          - {matrix: null, packages: *run_pylibcudf_packages_all_cu12}
+          - matrix:
+              cuda: "12.*"
+            packages:
+              - cuda-python>=12.9.2,<13.0a0
+          # fallback to CUDA 13 versions if 'cuda' is '13.*' or not provided
+          - matrix:
+            packages:
+              - cuda-python>=13.0.1,<14.0a0
   run_cudf:
     common:
       - output_types: [conda, requirements, pyproject]
@@ -694,9 +679,6 @@ dependencies:
           - packaging
           - rich
           - typing_extensions>=4.0.0
-      - output_types: [conda]
-        packages:
-          - *numba_cuda
       - output_types: requirements
         packages:
           # pip recognizes the index as a global option for the requirements.txt file
@@ -705,18 +687,14 @@ dependencies:
     specific:
       - output_types: [conda, requirements, pyproject]
         matrices:
-          - matrix: {cuda: "12.*"}
-            packages: &run_cudf_packages_all_cu12
-              - cuda-python>=12.9.1,<13.0a0
-          - {matrix: null, packages: *run_cudf_packages_all_cu12}
-      - output_types: [requirements, pyproject]
-        matrices:
-          - matrix: {cuda: "12.*"}
+          - matrix:
+              cuda: "12.*"
             packages:
-              - *numba_cuda_cu12
-          - matrix: # Fallback for no matrix
+              - cuda-python>=12.9.2,<13.0a0
+          # fallback to CUDA 13 versions if 'cuda' is '13.*' or not provided
+          - matrix:
             packages:
-              - *numba_cuda_cu12
+              - cuda-python>=13.0.1,<14.0a0
       - output_types: [requirements, pyproject]
         matrices:
           - matrix:
@@ -848,11 +826,9 @@ dependencies:
       - output_types: conda
         packages:
           - python-xxhash
-          - *numba_cuda
       - output_types: [pyproject, requirements]
         packages:
           - xxhash
-          - *numba_cuda_cu12
   test_python_cudf:
     common:
       - output_types: [conda, requirements, pyproject]
@@ -948,7 +924,28 @@ dependencies:
               cuda_suffixed: "true"
             packages:
               - libcudf-cu12==25.10.*,>=0.0.0a0
+          - matrix:
+              cuda: "13.*"
+              cuda_suffixed: "true"
+            packages:
+              - libcudf-cu13==25.10.*,>=0.0.0a0
           - {matrix: null, packages: [*libcudf_unsuffixed]}
+  depends_on_numba_cuda:
+    common:
+      - output_types: [conda]
+        packages:
+        - numba-cuda>=0.19.0,<0.20.0a0
+    specific:
+      - output_types: [requirements, pyproject]
+        matrices:
+          - matrix:
+              cuda: "12.*"
+            packages:
+              - numba-cuda[cu12]>=0.19.0,<0.20.0a0
+          # fallback to CUDA 13 versions if 'cuda' is '13.*' or not provided
+          - matrix:
+            packages:
+              - numba-cuda[cu13]>=0.19.0,<0.20.0a0
   depends_on_pylibcudf:
     common:
       - output_types: conda
@@ -967,6 +964,11 @@ dependencies:
               cuda_suffixed: "true"
             packages:
               - pylibcudf-cu12==25.10.*,>=0.0.0a0
+          - matrix:
+              cuda: "13.*"
+              cuda_suffixed: "true"
+            packages:
+              - pylibcudf-cu13==25.10.*,>=0.0.0a0
           - {matrix: null, packages: [*pylibcudf_unsuffixed]}
   depends_on_pylibcudf_pyarrow:
     common:
@@ -986,6 +988,11 @@ dependencies:
               cuda_suffixed: "true"
             packages:
               - pylibcudf-cu12[pyarrow]==25.10.*,>=0.0.0a0
+          - matrix:
+              cuda: "13.*"
+              cuda_suffixed: "true"
+            packages:
+              - pylibcudf-cu13[pyarrow]==25.10.*,>=0.0.0a0
           - {matrix: null, packages: [*plc_unsuffixed]}
   depends_on_cudf:
     common:
@@ -1005,6 +1012,11 @@ dependencies:
               cuda_suffixed: "true"
             packages:
               - cudf-cu12==25.10.*,>=0.0.0a0
+          - matrix:
+              cuda: "13.*"
+              cuda_suffixed: "true"
+            packages:
+              - cudf-cu13==25.10.*,>=0.0.0a0
           - {matrix: null, packages: [*cudf_unsuffixed]}
   depends_on_cudf_kafka:
     common:
@@ -1024,19 +1036,31 @@ dependencies:
               cuda_suffixed: "true"
             packages:
               - cudf_kafka-cu12==25.10.*,>=0.0.0a0
+          - matrix:
+              cuda: "13.*"
+              cuda_suffixed: "true"
+            packages:
+              - cudf_kafka-cu13==25.10.*,>=0.0.0a0
           - {matrix: null, packages: [*cudf_kafka_unsuffixed]}
   depends_on_cupy:
     common:
       - output_types: conda
         packages:
-          - cupy>=12.0.0
+          - cupy>=13.6.0
+    # NOTE: This is intentionally not broken into groups by a 'cuda_suffixed' selector like
+    #       other packages with -cu{nn}x suffixes in this file.
+    #       All RAPIDS wheel builds (including in devcontainers) expect cupy to be suffixed.
     specific:
       - output_types: [requirements, pyproject]
         matrices:
-          - matrix: {cuda: "12.*"}
-            packages: &cupy_packages_cu12
-              - cupy-cuda12x>=12.0.0
-          - {matrix: null, packages: *cupy_packages_cu12}
+          - matrix:
+              cuda: "12.*"
+            packages:
+              - cupy-cuda12x>=13.6.0
+          # fallback to CUDA 13 versions if 'cuda' is '13.*' or not provided
+          - matrix:
+            packages:
+              - &cupy_cu13 cupy-cuda13x>=13.6.0
   depends_on_libkvikio:
     common:
       - output_types: conda
@@ -1054,6 +1078,11 @@ dependencies:
               cuda_suffixed: "true"
             packages:
               - libkvikio-cu12==25.10.*,>=0.0.0a0
+          - matrix:
+              cuda: "13.*"
+              cuda_suffixed: "true"
+            packages:
+              - libkvikio-cu13==25.10.*,>=0.0.0a0
           - matrix:
             packages:
               - *libkvikio_unsuffixed
@@ -1076,6 +1105,11 @@ dependencies:
             packages:
               - librmm-cu12==25.10.*,>=0.0.0a0
           - matrix:
+              cuda: "13.*"
+              cuda_suffixed: "true"
+            packages:
+              - librmm-cu13==25.10.*,>=0.0.0a0
+          - matrix:
             packages:
               - *librmm_unsuffixed
   depends_on_rmm:
@@ -1096,6 +1130,11 @@ dependencies:
               cuda_suffixed: "true"
             packages:
               - rmm-cu12==25.10.*,>=0.0.0a0
+          - matrix:
+              cuda: "13.*"
+              cuda_suffixed: "true"
+            packages:
+              - rmm-cu13==25.10.*,>=0.0.0a0
           - matrix:
             packages:
               - *rmm_unsuffixed
